# Poetry_repo

./: .gitignore  README.md  home_work_2.py  home_work_3.py  home_work_4.py  home_work_4_1.py  home_work_4_2.py  home_work_5.py  home_work_click_button.py  home_work_regex.py  home_work_subtract_the_sum.py  hw5_general.py  my_calc.py  pars_bloomberg.py  parse_site.py  pyproject.toml  test_for_poetry.py  test_my_calc.py
.github/workflows/: main.yml
KateFox/: conftest.py  parse_site.py  sand.py  test_downloads_page.py  test_for_poetry.py  test_main_page.py
KateFox/other/: api.py  sample.py  test_api.py  test_for_poetry.py  test_forecast.py
KateFox/pages/: base_page.py  downloads_page.py  login_page.py  main_page.py
KateFox/pages_selen/: about_selenium_page.py  base_page.py  downloads_page.py  main_page.py  sand.py
KateFox/tests/: test_main_page.py
homework5/: dz5.py  human.py  sdet.py  tester.py
janalifanova/: calc.py  hw3.py  hw4.py
lesson1/: codewars.py  homework1.py  lesson1.py
lesson2/: codewars.py  homework2.py  homework2_1.py  lesson2.py
lesson3/: 2sum.py  counting_valleys.py  csv_representation.py  homework3.py  lesson3.py  rot13.py  sleep.py  solution.py  user_friendly_size.py  wilson_primes.py  сount_by_x.py
lesson4/: homework4.py  lesson4.py  my_calc.py  my_file.py  solution.py  string_cleaning.py  subtract_the_sum.py  sum_of_dif_in_array.py  sum_of_positive.py  utils.py
lesson5/: codewars.py  homework5.py
lesson6/: homework.md  moving_zeros_to_the_end.py
liza/: hw_3.py  hw_3_thierry.py  hw_4.py  hw_5.py  my_calc.py
utils/: base_test.py
(+1 files in other folders)
