[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = "Python QA 4 Everyone Homeworks"
authors = ["Yulia Har"]
readme = "README.md"
packages = [{include = "lesson3"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
flake8 = "^5.0.4"
selenium = "^4.4.3"
pytest = "^7.1.3"
webdriver-manager = "^3.8.3"
bs4 = "^0.0.1"
jusText = "^3.0.0"
ijson = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
